[gd_scene load_steps=4 format=3 uid="uid://cwfl3yw8hggrk"]

[ext_resource type="Texture2D" uid="uid://ccyo3a5ler4aa" path="res://icon.svg" id="1_40r1c"]
[ext_resource type="Script" uid="uid://0fcj0b5tsqgx" path="res://Deprecated/tower_weapon.gd" id="1_pcu4x"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6jbq1"]
radius = 377.16

[node name="TowerWeapon" type="Area2D"]
collision_mask = 6
script = ExtResource("1_pcu4x")
metadata/_edit_group_ = true

[node name="WeaponImage" type="Sprite2D" parent="."]
scale = Vector2(0.515625, 0.515625)
texture = ExtResource("1_40r1c")

[node name="WeaponArea" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6jbq1")

[node name="ShootingPoint" type="Marker2D" parent="."]
position = Vector2(0, -24)

[node name="WeaponCooldown" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="WeaponCooldown" to="." method="_on_timer_timeout"]
